# albert7-main

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  run_meta_harness.py  run_ouroboros_self_improve.py
gmas/: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  tox.toml
gmas/benchmarks/: .env.example  __init__.py  benchmark_vs_langgraph.py  benchmark_web_tool.py  gmas_vs_gmas.py
gmas/docs/: .placeholders.md  README.md  index.md
gmas/docs/api/: builder.md  config.md  core.md  execution.md  tools.md
gmas/docs/contributing/: code-style.md  index.md  testing.md  workflow.md
gmas/docs/examples/: basic-usage.md  gnn-routing.md  streaming.md
gmas/docs/getting-started/: development.md  installation.md  quickstart.md
gmas/docs/user-guide/: callbacks.md  key-concepts.md  memory.md  tools.md
gmas/docs/user-guide/core/: agent-profile.md  macp-runner.md  rolegraph.md  scheduler.md
gmas/examples/: __init__.py  agent_with_tools_example.py  auto_builder_example.py  basic_usage.py  computer_use_bootstrap.py  computer_use_observer.py  computer_use_quick_smoke.py  early_stop_example.py  embedding_builder_example.py  gnn_routing.py  math_chain_example.py  mcp_client_example.py  medical_star_topology.py  multi_agent_tools_example.py  multi_model_example.py  playground_web_gmas.ipynb  schema_validation_example.py  streaming_example.py  vector_search_example.py  visualization_example.py  web_search_example.py
gmas/src/gmas/builder/: __init__.py  auto_builder.py  embedding_builder.py  graph_builder.py
gmas/src/gmas/callbacks/: __init__.py  base.py  context.py  events.py  manager.py
gmas/src/gmas/config/: __init__.py  logging.py  settings.py
gmas/src/gmas/core/: __init__.py  agent.py  algorithms.py  encoder.py  events.py  gnn.py  graph.py  metrics.py  schema.py  visualization.py
gmas/src/gmas/execution/: __init__.py  budget.py  errors.py  scheduler.py  streaming.py
gmas/src/gmas/tools/: __init__.py  base.py  code_interpreter.py  file_search.py  function_calling.py  llm_integration.py  mcp_client.py  shell.py  vector_search.py
gmas/src/gmas/utils/: __init__.py  async_utils.py  env.py  memory.py  state_storage.py
gmas/tests/: __init__.py  conftest.py  test_agent.py  test_algorithms.py  test_async_utils.py  test_auto_builder.py  test_budget.py  test_builder.py  test_callback_handlers.py  test_callback_manager.py  test_callback_wiring.py  test_callbacks.py  test_computer_use.py  test_computer_use_tools_integration.py  test_computer_use_windows.py  test_conditional_edges.py  test_config_settings.py  test_core_events.py  test_core_metrics.py  test_core_schema.py  test_embedding_builder.py  test_encoder.py  test_errors.py  test_gnn.py  test_graph.py  test_mcp_client.py  test_memory.py  test_runner.py  test_runner_classes.py  test_runner_integration.py  test_scheduler.py  test_settings.py  test_state_storage.py  test_streaming.py  test_tools.py  test_tools_extended.py  test_tools_remaining.py  test_vectorsearch.py  test_visualization.py  test_web_search.py
ouroboros/: .gitignore  BIBLE.md  README.md  colab_bootstrap_shim.py  colab_launcher.py  pyproject.toml
ouroboros/.drive/state/: state.json
ouroboros/docs/: evolution.json  index.html
ouroboros/notebooks/: quickstart.ipynb
ouroboros/ouroboros/: __init__.py  agent.py  apply_patch.py  consciousness.py  context.py  deadline.py  discipline.py  limits.py  llm.py  loop.py  memory.py  memory_hooks.py  model_failure.py  owner_inject.py  preflight_recovery.py  review.py  task_planner.py  tool_args_repair.py  utils.py  workspace_patch.py
ouroboros/ouroboros/tools/: __init__.py  background_jobs.py  browser.py  compact_context.py  completion_gates.py  control.py  core.py  deep_search.py  evolution_stats.py  git.py  github.py  github_discovery.py  health.py  knowledge.py  mcp_discovery.py  mcp_servers.py  palace_tools.py  phase_contract.py  phase_control.py  registry.py  review.py  search.py  shell.py  skills_tools.py  terminal_session.py  tool_discovery.py  umbrella_tools.py  vision.py  web_search_adapter.py
ouroboros/ouroboros/workspaces/polymarket_sim_empty/: test_smoke.py
ouroboros/prompts/: CONSCIOUSNESS.md  SYSTEM.md
ouroboros/supervisor/: events.py  git_ops.py  queue.py  state.py  telegram.py  workers.py
ouroboros/tests/: conftest.py  test_apply_workspace_patch_add_file_contract.py  test_command_validation.py  test_commit_filter.py  test_completion_gates.py  test_configure_workspace_skills.py  test_constitution.py  test_context_builder.py  test_deep_search.py  test_deep_search_catalog.py  test_discipline.py  test_github_discovery.py  test_limits.py  test_llm_client_config.py  test_llm_config.py  test_loop_auto_compact.py  test_loop_phase_manifest.py  test_loop_planner_orchestration.py  test_loop_self_check.py  test_loop_state_evidence.py  test_memory_hooks.py  test_message_routing.py  test_model_failure.py  test_palace_memory_trust.py  test_phase_contract_tools.py  test_phase_control_artifacts.py  test_preflight_recovery.py  test_prompt_governance.py  test_repo_write_commit_policy.py  test_round_io_audit.py  test_run_workspace_command_terminal.py  test_runtime_controls.py  test_smoke.py  test_task_artifact_paths.py  test_task_planner.py  test_terminal_session.py  test_tool_args_repair.py  test_umbrella_memory_filtering.py  test_umbrella_phase_prompt_dedup.py  test_umbrella_prompt_tools.py  (+6 more)
ouroboros/tests/helpers/: __init__.py  capability_declaration.py
workspaces/calculator/: README.md  TASK_MAIN.md  pyproject.toml  workspace.toml
workspaces/calculator/src/calculator/: __init__.py  __main__.py  core.py  (+3 more)
workspaces/calculator/tests/: __init__.py  conftest.py  test_core.py  test_engine.py  test_entrypoint.py  test_gui.py  test_model.py  test_project_setup.py
workspaces/multi_agent_debate_graph/: .env.example  README.md  TASK_MAIN.md  pyproject.toml  requirements.txt  workspace.toml
workspaces/multi_agent_debate_graph/tests/: test_graph.py
(+679 files in other folders)
