[project]
name = "umbrella"
version = "0.1.0"
description = "Umbrella - Policy-driven AI system with workspace-first approach"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "flask-sse>=1.0.0",
    "mcp>=1.26.0",
    "mempalace>=3.2.0",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygame>=2.6.1",
    "pytest>=9.0.3",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
tb = ["terminal-bench>=0.2.13; python_version >= '3.12'"]

[tool.pytest.ini_options]
testpaths = ["umbrella/tests", "ouroboros/tests"]
pythonpath = ["ouroboros"]

[project.scripts]
# Операторский UI: после `yarn build` в `web/` — `uv run bridge` (см. README и docs/README.md).
bridge = "umbrella.web_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umbrella", "terminal_bench_integration"]

[tool.uv.sources]
frontier-ai-gmas = { path = "gmas", editable = true }
