[project]
name = "frontier-ai-gmas"
authors = [
    { name = "Vitaly Belov", email = "vitalii.belof@gmail.com" },
    { name = "Artyom Sosedka", email = "avalsosedka@sberbank.ru" },
    { name = "Vladislav Tishin", email = "vvikttishin@sberbank.ru" },
    { name = "Arkadiy Bagdasaryan", email = "arkadiichruc@gmail.com" },
]
dynamic = ["version"]
description = "Dynamic graph-based multi-agent system"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license-files = ["LICENSE"]
keywords = ["agents", "multi-agent", "graph", "rustworkx", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "rustworkx>=0.17.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.11.0",
    "loguru>=0.7.3",
    "openai>=2.30.0",
    "httpx>=0.28.1",
    "semver>=3.0.4",
]

[project.optional-dependencies]

# --- Tool extras ---
web-search = ["ddgs>=9.11.4"]
web-fast = ["selectolax>=0.4.7"]
selenium = ["selenium>=4.41.0"]
mcp = ["mcp>=1.26.0"]

# --- Model / ML extras ---
embeddings = ["sentence-transformers>=5.3.0"]
pyg = ["torch-geometric>=2.7.0"]

# --- Visualization ---
viz = ["graphviz>=0.21", "matplotlib>=3.10.8", "pillow>=12.1.1"]

# --- Computer use (platform-specific) ---
computer-use-linux = [
    "pillow>=12.1.1; sys_platform == 'linux'",
    "pytesseract>=0.3.13; sys_platform == 'linux'",
]
computer-use-macos = [
    "pillow>=12.1.1; sys_platform == 'darwin'",
    "pytesseract>=0.3.13; sys_platform == 'darwin'",
]
computer-use-windows = [
    "pillow>=12.1.1; sys_platform == 'win32'",
    "pywin32>=311; sys_platform == 'win32'",
    "pytesseract>=0.3.13; sys_platform == 'win32'",
]
computer-use = [
    "pillow>=12.1.1",
    "pywin32>=311; sys_platform == 'win32'",
    "pytesseract>=0.3.13",
]

# --- Benchmarks (langgraph comparison, stats) ---
benchmarks = [
    "langgraph>=1.1.3",
    "langchain-core>=1.2.22",
    "scipy>=1.17.1",
    "datasets>=4.8.4",
]

# --- Examples ---
examples = [
    "frontier-ai-gmas[viz]>=0.0.0",
    "frontier-ai-gmas[web-search]>=0.0.0",
    "frontier-ai-gmas[pyg]>=0.0.0",
    "nest-asyncio>=1.6.0",
]

# --- All library extras (no dev/benchmark/docs) ---
all = [
    "frontier-ai-gmas[web-search]>=0.0.0",
    "frontier-ai-gmas[web-fast]>=0.0.0",
    "frontier-ai-gmas[selenium]>=0.0.0",
    "frontier-ai-gmas[mcp]>=0.0.0",
    "frontier-ai-gmas[embeddings]>=0.0.0",
    "frontier-ai-gmas[pyg]>=0.0.0",
    "frontier-ai-gmas[viz]>=0.0.0",
    "frontier-ai-gmas[computer-use]>=0.0.0",
]

[tool.ruff]
extend = ".ruff.toml"
target-version = "py312"

[tool.ty.environment]
root = ["./src"]
python = "./.venv"

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/site-packages/*"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[dependency-groups]
build = [
    "python-semantic-release>=10.5.3",
    "uv>=0.11.2",
    "uv-dynamic-versioning>=0.14.0",
]
lint = ["ruff>=0.15.8"]
typecheck = ["ty>=0.0.26"]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "tox>=4.50.3",
    "tox-uv>=1.33.4",
    "coverage>=7.13.5",
    "pytest-cov>=7.1.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.21",
]

dev = ["prek>=0.3.8", "ruff>=0.15.8", "ty>=0.0.26"]

[tool.semantic_release]
assets = []
build_command = "uv lock --upgrade-package \"$PACKAGE_NAME\" && git add uv.lock && uv build"
commit_message = "chore: bump version to {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = false
no_git_verify = false
tag_format = "v{version}"
add_partial_tags = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = true

[tool.semantic_release.branches.release]
match = "release/.*"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore(?:\\([^)]*?\\))?: .+",
    "ci(?:\\([^)]*?\\))?: .+",
    "refactor(?:\\([^)]*?\\))?: .+",
    "style(?:\\([^)]*?\\))?: .+",
    "test(?:\\([^)]*?\\))?: .+",
    "build\\((?!deps\\)).+: .+",
    "Initial [Cc]ommit.*",
]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
]
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmas"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
bump = true
fallback-version = "0.0.0"
