[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "Simple calculator application with GUI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
calculator = "calculator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]